# gcal_time_track_tg_bot

./: .coveragerc  .dockerignore  .env.example  .gitignore  .vim  Dockerfile  README.md  alembic.ini  credentials.json  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 15e092652285_init.py  1924a11946f8_init.py  25ca7afc708a_init.py  3505efd09bb2_init.py  3afc6477b519_init.py  40f7dcdf931b_init.py  43ac3b7754ba_init.py  55d9bb11f1dd_init.py  59cc4ebaf4ea_init.py  80726396cd81_init.py  c22ee0047eed_init.py  cbb131f7b5ed_init.py  dc13cc17fd79_init.py  f444d45d6d59_init.py  f603f5f26ddc_init.py
tests/: test_gcal_connection.py
time_tracking_via_gcal/: __main__.py  app.py  bot.py  gcal_manager.py  messages.py  settings.py  structs.py  utils.py
time_tracking_via_gcal/handlers/: __init__.py  data_processing.py  reports.py  service.py  settings.py
time_tracking_via_gcal/handlers/utils/: __init__.py  data_processing.py
time_tracking_via_gcal/models/: __init__.py  base.py  dal.py  report_settings.py  user.py  user_settings.py
time_tracking_via_gcal/utils/: gcal_manager.py
