[tool.poetry]
name = "time_tracking_via_gcal"
version = "0.1.0"
description = ""
authors = ["ZhukovGreen <zhukovgreen@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^1.7"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.3.0"
aiohttp = "^3.5"
aiogram = "^2.0"
envparse = "^0.2.0"
attrs = "^19.1"
oauth2client = "^4.1"
pandas = "^0.24.2"
pendulum = "^2.0"
aiofiles = "^0.4.0"
yarl = "^1.3"
aioredis = "^1.2"
alembic = "^1.0"
sqlalchemy-citext = "^1.3"
aiopg = {version = "^0.16.0",extras = ["sa"]}

[tool.poetry.dev-dependencies]
neovim = "^0.3.1"
pytest = "^4.3"
pytest-sugar = "^0.9.2"
ipdb = "^0.12.0"
pytest-aiohttp = "^0.3.0"
notebook = "^5.7"

[tool.black]
line-length = 54
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

